upload das files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,36 @@
 *.jpg
 *.exe
 lancamento_servicos_procfit.ini
+build/lancamento_pdfs/Analysis-00.toc
+build/lancamento_pdfs/base_library.zip
+build/lancamento_pdfs/EXE-00.toc
+build/lancamento_pdfs/localpycs/pyimod01_archive.pyc
+build/lancamento_pdfs/lancamento_pdfs.pkg
+build/lancamento_pdfs/localpycs/pyimod02_importers.pyc
+build/lancamento_pdfs/localpycs/pyimod03_ctypes.pyc
+build/lancamento_pdfs/localpycs/pyimod04_pywin32.pyc
+build/lancamento_pdfs/localpycs/struct.pyc
+build/lancamento_pdfs/PKG-00.toc
+build/lancamento_pdfs/PYZ-00.pyz
+build/lancamento_pdfs/PYZ-00.toc
+build/lancamento_pdfs/Tree-00.toc
+build/lancamento_pdfs/Tree-01.toc
+build/lancamento_pdfs/Tree-02.toc
+build/lancamento_pdfs/warn-lancamento_pdfs.txt
+build/lancamento_pdfs/xref-lancamento_pdfs.html
+build/lancamento_servicos_procfit/Analysis-00.toc
+build/lancamento_servicos_procfit/EXE-00.toc
+build/lancamento_servicos_procfit/lancamento_servicos_procfit.pkg
+build/lancamento_servicos_procfit/localpycs/pyimod02_importers.pyc
+build/lancamento_servicos_procfit/localpycs/pyimod02_importers.pyc
+build/lancamento_servicos_procfit/localpycs/pyimod01_archive.pyc
+build/lancamento_servicos_procfit/base_library.zip
+build/lancamento_servicos_procfit/localpycs/pyimod03_ctypes.pyc
+build/lancamento_servicos_procfit/localpycs/pyimod04_pywin32.pyc
+build/lancamento_servicos_procfit/localpycs/struct.pyc
+build/lancamento_servicos_procfit/PKG-00.toc
+*.pyz
+build/lancamento_servicos_procfit/PYZ-00.toc
+*.toc
+build/lancamento_servicos_procfit/warn-lancamento_servicos_procfit.txt
+build/lancamento_servicos_procfit/xref-lancamento_servicos_procfit.html
