--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ build/lancamento_servicos_procfit/PYZ-00.toc
 *.toc
 build/lancamento_servicos_procfit/warn-lancamento_servicos_procfit.txt
 build/lancamento_servicos_procfit/xref-lancamento_servicos_procfit.html
+usando como teste.ipynb
